# carliber-tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  electron-builder.json  package-lock.json  package.json  run.bat  start.bat  vite.config.js
_legacy/: dependency-reduced-pom.xml  pom.xml  run.bat
electron/: main.js  preload.js  pty.js  shared.js
electron/ipc/: claude-settings.js  config.js  files.js  projects.js  pty.js  sessions.js  system.js  windows.js
src/: App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent_config.rs  config.rs  files.rs  mod.rs  projects.rs  pty.rs  sessions.rs  system.rs  vcs.rs  workflows.rs
src/components/: AgentSettings.tsx  ClaudeChat.tsx  ClaudeSettings.tsx  FileEditor.tsx  FileTree.tsx  Modal.tsx  ProjectEditDialog.tsx  ProjectInfo.tsx  ProjectSelector.tsx  SessionsView.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx  TitleBar.tsx  Titlebar.tsx  VcsPanel.tsx
src/components/block-terminal/: AiCommandSearch.tsx  Block.tsx  BlockInputEditor.tsx  BlockModel.ts  BlockSearch.tsx  BlockTerminal.tsx  HistorySearch.tsx  Workflows.tsx  useBlockTerminal.ts
src/components/settings/: AgentGlobalConfigTab.tsx  AgentSelector.tsx  ClaudeGlobalConfigTab.tsx  (+10 more)
src/context/: AppContext.tsx
src/hooks/: useClaudeState.ts  useTheme.ts
src/lib/: tauri-api.ts
src/styles/: global.css
src/types/: api.d.ts  electron.d.ts
src/utils/: ansi.ts  format.ts  project-scan.ts  storage.ts
(+36 files in other folders)
