[package]
name = "carliber-tool"
version = "3.0.0"
description = "carliber-tool — omp wrapper + Warp-style block terminal"
authors = ["carliber"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "carliber_tool_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

# PTY + async
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Open paths/URLs via OS default handler (replaces deprecated tauri-plugin-shell::open)
open = "5"

# Filesystem / paths / logging
dirs = "5"
notify = "6"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
